--- a/Refuge Christian Fellowship/Refuge Christian Fellowship/Base.lproj/Main_iPhone.storyboard
+++ b/Refuge Christian Fellowship/Refuge Christian Fellowship/Base.lproj/Main_iPhone.storyboard
@@ -112,7 +112,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                             </button>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="g98-gD-ly9" customClass="OBSlider">
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="g98-gD-ly9" customClass="OBSlider">
                                 <rect key="frame" x="63" y="362" width="181.5" height="31"/>
                                 <rect key="contentStretch" x="0.0" y="0.0" width="0.25" height="0.25"/>
                                 <color key="minimumTrackTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
@@ -145,6 +145,12 @@
                             <imageView appearanceType="aqua" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wan-qY-AX9">
                                 <rect key="frame" x="20" y="422" width="68" height="41"/>
                             </imageView>
+                            <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Loading" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bjx-Dl-Tib">
+                                <rect key="frame" x="132" y="400" width="62" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -152,6 +158,7 @@
                     <navigationItem key="navigationItem" id="Rx1-kk-Om5"/>
                     <connections>
                         <outlet property="elapsedTime" destination="6kS-fb-Qky" id="Atd-oo-ea3"/>
+                        <outlet property="loading" destination="bjx-Dl-Tib" id="93C-oe-x6d"/>
                         <outlet property="playerSlider" destination="g98-gD-ly9" id="D7w-ad-Cd1"/>
                         <outlet property="playpausebtn" destination="pO5-hQ-c05" id="Lh2-Yx-UMB"/>
                         <outlet property="podcastDate" destination="kc6-00-UNx" id="ioY-GK-AMn"/>
@@ -165,24 +172,73 @@
             </objects>
             <point key="canvasLocation" x="1227" y="-729"/>
         </scene>
-        <!--Table View Controller - Read-->
+        <!--Navigation Controller - Item-->
+        <scene sceneID="jAV-ZR-NKh">
+            <objects>
+                <navigationController id="n1q-FX-Sqi" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="iIo-4G-yKd"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="bFQ-Oz-jxa">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="TmC-9j-6T5" kind="relationship" relationship="rootViewController" id="XUQ-1s-i0B"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OsC-yk-lpP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="315" y="615"/>
+        </scene>
+        <!--Rcf Blog Table View Controller - The Blog-->
         <scene sceneID="P8t-hZ-ajf">
             <objects>
-                <tableViewController id="TmC-9j-6T5" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="37M-C1-EWG">
+                <tableViewController id="TmC-9j-6T5" customClass="rcfBlogTableViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="48" sectionHeaderHeight="22" sectionFooterHeight="22" id="37M-C1-EWG">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="blog" id="rVR-R2-WjA">
+                            <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="blogCell" rowHeight="48" id="rVR-R2-WjA" customClass="rcfBlogTableViewCell">
                                 <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="rVR-R2-WjA" id="ztq-Gj-2F9">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Creator" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="plC-zr-huO">
+                                            <rect key="frame" x="189" y="0.0" width="211" height="23"/>
+                                            <accessibility key="accessibilityConfiguration">
+                                                <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES"/>
+                                            </accessibility>
+                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                            <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35P-Am-0dO">
+                                            <rect key="frame" x="13" y="20" width="211" height="23"/>
+                                            <accessibility key="accessibilityConfiguration">
+                                                <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES"/>
+                                            </accessibility>
+                                            <fontDescription key="fontDescription" type="italicSystem" pointSize="13"/>
+                                            <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label appearanceType="aqua" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PfQ-03-yy1">
+                                            <rect key="frame" x="13" y="0.0" width="211" height="23"/>
+                                            <accessibility key="accessibilityConfiguration">
+                                                <accessibilityTraits key="traits" none="YES" staticText="YES" notEnabled="YES"/>
+                                            </accessibility>
+                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                                            <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="zeh-WE-KWl" kind="push" id="cmT-eY-Qzy"/>
+                                    <outlet property="BlogPostCreator" destination="plC-zr-huO" id="UFg-Vm-Ykk"/>
+                                    <outlet property="BlogPostDate" destination="35P-Am-0dO" id="KNa-56-997"/>
+                                    <outlet property="BlogPostTitle" destination="PfQ-03-yy1" id="nix-aF-ref"/>
+                                    <segue destination="zeh-WE-KWl" kind="push" identifier="BlogPost2Detail" id="hP9-Zn-vbD"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -192,15 +248,16 @@
                         </connections>
                     </tableView>
                     <tabBarItem key="tabBarItem" title="Read" image="second" id="boz-jG-wdf"/>
+                    <navigationItem key="navigationItem" title="The Blog" id="Snt-ER-nm4"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="58C-Fh-8Te" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="320" y="691"/>
+            <point key="canvasLocation" x="730" y="615"/>
         </scene>
-        <!--View Controller-->
+        <!--Rcf Blog Detail View-->
         <scene sceneID="Mbw-LO-dXu">
             <objects>
-                <viewController id="zeh-WE-KWl" sceneMemberID="viewController">
+                <viewController id="zeh-WE-KWl" customClass="rcfBlogDetailView" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="gOj-5o-o5w"/>
                         <viewControllerLayoutGuide type="bottom" id="ipt-qD-5cT"/>
@@ -209,21 +266,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" fixedFrame="YES" text="blog detail view" textAlignment="center" lineBreakMode="tailTruncation" minimumFontSize="10" translatesAutoresizingMaskIntoConstraints="NO" id="uHQ-Ei-lxR">
-                                <rect key="frame" x="37" y="131" width="247" height="42"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                                <fontDescription key="fontDescription" name="Helvetica" family="Helvetica" pointSize="36"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <webView appearanceType="aqua" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xje-1E-h6q">
+                                <rect key="frame" x="-1" y="0.0" width="320" height="521"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </webView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="1LG-Kq-cC6"/>
+                    <connections>
+                        <outlet property="webview" destination="xje-1E-h6q" id="FiG-Uj-yRg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0ha-ya-BHD" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="720" y="673"/>
+            <point key="canvasLocation" x="1146" y="615"/>
         </scene>
         <!--Rcf View Controller - Second-->
         <scene sceneID="ot8-2e-RuS">
@@ -282,7 +339,7 @@
                     <connections>
                         <segue destination="QUy-BD-bpt" kind="relationship" relationship="viewControllers" id="M8t-EP-wfW"/>
                         <segue destination="b1H-8s-33X" kind="relationship" relationship="viewControllers" id="X12-z4-3NI"/>
-                        <segue destination="TmC-9j-6T5" kind="relationship" relationship="viewControllers" id="LpS-6F-BjZ"/>
+                        <segue destination="n1q-FX-Sqi" kind="relationship" relationship="viewControllers" id="bkG-kD-oju"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FNP-y4-bzi" sceneMemberID="firstResponder"/>
